React init commit

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta content="" charset="utf-8">
 		<meta content="ID=edge" http-equiv="X-UA-Compatible">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>NoNAme</title>
+		<title>DAEA Company CRM</title>
 		<script src="/assets/jquery/dist/jquery.min.js"></script>
 		<script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 		<link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
