파일 관리 UI, 기능 구현 완료

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,23 @@
 		<title>DAEA Company CRM</title>
 		<script src="/assets/jquery/dist/jquery.min.js"></script>
 		<script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
+		<style>
+		* {
+			    margin: 0;
+			}
+			html, body {
+			    height: 100vh;
+			}
+			.wrapper {
+			    min-height: 80vh;
+			    height: auto !important;
+			    height: 80vh;
+			    margin: 0 auto -80px; /* the bottom margin is the negative value of the footer's height */
+			}
+			.footer, .push {
+			    height: 80px; /* .push must be the same height as .footer */
+			}
+		</style>
 		<link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 		<link href="/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
