--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
 			.footer, .push {
 			    height: 80px; /* .push must be the same height as .footer */
 			}
+			.modal-xlg {
+				width: 90vw;
+			}
 		</style>
 		<link href="/assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 		<link href="/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
